# SimLib

./: CMakeLists.txt  LICENSE  README.md
CMake/: DefaultCompilerFlags.cmake  externalLibs.cmake
res/floor/b/: texture_tile.fs  texture_tile.vs
res/meshes/camera/: Camera.mtl
res/meshes/materialTest/: materialTest.mtl
res/meshes/materialTextureTest/: materialTextureTest.mtl
res/shader/: InstancedPrimitiveDrawer.fs  InstancedPrimitiveDrawer.vs  PrimitiveDrawer.fs  PrimitiveDrawer.vs  PrimitiveDrawerTextureCoords.fs  PrimitiveDrawerTextureCoords.vs  PrimitiveDrawerTextureCoordsShadow.fs  PrimitiveDrawerTextureCoordsShadow.vs  PrimitiveDrawerTextureQuad.fs  PrimitiveDrawerTextureQuad.vs  ScreenTexture.fs  ScreenTexture.vs  catmull.vs  lighting.glsl  lighting_shadow.glsl  meshDrawer.fs  meshDrawer.vs  pbrt.glsl  references.txt
src/: dummy.cpp
src/SimLib/: Application.cpp  Application.h  SODeformableObject.h
src/SimLib/Codegen/: computeFixDoFEnergy.cpp
src/SimLib/Collision/: AABBNode.h  CRay.cpp  CRay.h  CTriangle.cpp  CTriangle.h  Heuristic.h  HitRecord.h  collisionElement.cpp
src/SimLib/Core/: File.h  LBFGS.cpp  LBFGS.h  LineSearch.h  SOMaterial.h  SOTypes.h  SOUtils.cpp  SOUtils.h  UnconstrainedLBFGS.h  UnconstrainedNewton.cpp  UnconstrainedNewton.h
src/SimLib/Elements/: DofElementBase.h  ElementBase.h  FixDoFElement.cpp  FixDoFElement.h
src/SimLib/Geom/: Mesh.cpp  Mesh.h  MeshObj.h  Plane.h  Primitive.cpp  Primitive.h  SimpleTriMesh.cpp  TriPair.h
src/SimLib/Viewer/: Camera.cpp  Camera.h  ObjMesh.cpp  ObjMesh.h  OpenGL_shader.h  OpenGL_state.cpp  OpenGL_state.h  PrimitiveDrawer.cpp  PrimitiveDrawer.h  Program.cpp  Program.h  ShaderCache.cpp  ShadowMap.cpp  ShadowMap.h  ViewerCore.h
src_core/SimLib/: Precompiled.h  SODeformableObject.cpp
src_core/SimLib/Codegen/: computeFixDoFEnergy.h
src_core/SimLib/Collision/: AABB.cpp  AABB.h  (+7 more)
(+36 files in other folders)
